--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 markers =
     smoke: marker for smoke tests
     regression: marker for regression tests
+    login_guest: marker for guest on the main page
